<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".users.get_delete_update.UsersListGET">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/change_info_of_user"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@drawable/info_bg"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/name">

                <EditText
                    android:id="@+id/firtstname1"
                    android:layout_width="match_parent"
                    android:inputType="textCapWords"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_for_text1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/surname">

                <EditText
                    android:id="@+id/lastname1"
                    android:layout_width="match_parent"
                    android:inputType="textCapWords"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_for_text1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/birthdate">

                <EditText
                    android:id="@+id/year_of_birth1"
                    android:inputType="textVisiblePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_for_text1" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/email">

                <EditText
                    android:id="@+id/email1"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_for_text1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/phone_number">

                <EditText
                    android:id="@+id/phone1"
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_for_text1" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/response"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingTop="4dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    android:text="                    "
                    android:textColor="#F73E3D3D"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/changebutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/shape_for_button"
                    android:backgroundTint="#8EF88A"
                    android:gravity="center"
                    android:text="@string/change"
                    app:backgroundTint="#63F443" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>